<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             tools:context=".DeleteFragment">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/tvdelete"
              android:textColor="@color/black"
              android:textSize="20sp"
              android:id="@+id/tvdelete"/>

    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/edNombreDelete"
            android:text="@string/edNombre"
    />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/eliminar"
            android:id="@+id/bnDelete"/>

</LinearLayout>