<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              android:orientation="vertical"
              tools:context=".SearchFragment">

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/tvsearch"
              android:textColor="@color/black"
              android:textSize="20sp"
              android:id="@+id/tvsearch"/>

    <EditText
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/edNombreSearch"
            android:hint="@string/edNombre"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buscar"
            android:id="@+id/bnSearch"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
            android:id="@+id/recycler"/>


</LinearLayout>