<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp"
              tools:context=".AddFragment" android:background="@drawable/linear_gradient">

    <TextView android:layout_width="392dp" android:layout_height="51dp"
              android:gravity="center"
              android:text="@string/tvadd"
              android:textColor="@color/black"
              android:textSize="20sp"
              android:id="@+id/tvadd" android:fontFamily="sans-serif-black" android:textAlignment="textStart"
              android:layout_marginLeft="4dp" android:drawableLeft="@drawable/ic_add_icon"
              android:drawablePadding="4dp"/>

    <EditText
            android:layout_width="366dp" android:layout_height="wrap_content"
            android:id="@+id/edID"
            android:inputType="number"
            android:hint="@string/edID" android:textColor="#000000" android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:drawableLeft="@drawable/ic_id" android:layout_marginLeft="16dp" android:drawablePadding="4dp"/>
    <EditText
            android:layout_width="364dp" android:layout_height="wrap_content"
            android:id="@+id/edNombre"

            android:hint="@string/edNombre" android:inputType="textPersonName" android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableLeft="@drawable/ic_nombre" android:layout_marginLeft="16dp" android:drawablePadding="4dp"/>
    <EditText
            android:layout_width="366dp" android:layout_height="wrap_content"
            android:id="@+id/edCantidad"
            android:inputType="number"
            android:hint="@string/edCantidad" android:textColor="@color/black" android:textColorHint="@color/black"
            android:layout_marginLeft="16dp" android:drawableLeft="@drawable/ic_cantidad"
            android:drawablePadding="4dp"/>
    <EditText
            android:layout_width="366dp" android:layout_height="wrap_content"
            android:id="@+id/edPrecio"
            android:inputType="numberDecimal"
            android:hint="@string/edPrecio" android:textColor="@color/black" android:textColorHint="@color/black"
            android:layout_marginLeft="16dp" android:drawableLeft="@drawable/ic_precio" android:drawablePadding="4dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enviar"
                android:id="@+id/bnAdd" android:layout_gravity="center" android:background="@drawable/button_selector"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.166" android:fontFamily="sans-serif"/>
        <ImageView
                android:src="@drawable/plushie"
                android:layout_width="178dp"
                android:layout_height="231dp" android:id="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.69"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>